# agent-hk

./: .gitignore  CLAUDE.md  README.md  components.json  notification.html  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  notification.css  notification.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/: rules-sidebar.tsx  sidebar.tsx  theme-provider.tsx
src/components/panels/: general-panel.tsx  hook-panel.tsx  notification-settings-panel.tsx  notifications-panel.tsx  other-event-panel.tsx  permissionrequest-panel.tsx  pretooluse-panel.tsx  sync-panel.tsx  webhook-panel.tsx
src/components/ui/: button.tsx  input.tsx  switch.tsx
src/types/: index.ts
